--- a/css/_playing.scss
+++ b/css/_playing.scss
@@ -6,6 +6,7 @@
     // height: 75px;
     bottom: 10px;
     background-color: $main-color;
+    padding-left: 10px;
     #timer {
         width: 15%;
         display: inline-block;
