--- a/css/_home-btn.scss
+++ b/css/_home-btn.scss
@@ -1,6 +1,17 @@
 .home-btn {
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: 10px;
     bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    button {
+        height: 60%;
+        width: 30%;
+        background-color: #fff;
+        border: none !important;
+        outline: none !important;
+        border-radius: 10px;
+    }
 }
