--- a/css/style.css
+++ b/css/style.css
@@ -255,9 +255,20 @@ input[type=range]:hover {
 
 .home-btn {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 10px;
   bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.home-btn button {
+  height: 60%;
+  width: 30%;
+  background-color: #fff;
+  border: none !important;
+  outline: none !important;
+  border-radius: 10px;
 }
 
 * {
