--- a/css/_container.scss
+++ b/css/_container.scss
@@ -1,3 +1,4 @@
+@import 'song';
 .container {
     position: absolute;
     top: 10%;
@@ -6,11 +7,16 @@
     height: calc(90% - 100px);
     overflow-y: scroll;
     overflow-x: hidden;
-    .title {
+    .subbar {
         font-size: 24px;
         font-weight: 700;
         margin-left: 30px;
         margin-top: 10px;
+        display: flex;
+        justify-content: space-between;
+        .searchBox {
+            box-sizing: border-box;
+        }
     }
     .songList {
         margin-top: 20px;
@@ -19,7 +25,6 @@
         // display: flex;
         // align-items: center;
         // justify-content: center;
-        @import 'song';
     }
 }
 
