--- a/css/_home-btn.scss
+++ b/css/_home-btn.scss
@@ -13,5 +13,6 @@
         border: none !important;
         outline: none !important;
         border-radius: 10px;
+        cursor: pointer;
     }
 }
