--- a/css/_playing.scss
+++ b/css/_playing.scss
@@ -1,5 +1,5 @@
 // @import 'song';
-@import 'inputRange';
+@import 'inputs';
 .playing {
     position: absolute;
     width: calc(100% - 10px);
@@ -11,32 +11,10 @@
         width: 15%;
         display: inline-block;
         padding-left: 20px;
-        margin-top: 20px;
+        text-align: center;
         // position: absolute;
     }
-    .cd {
-        height: 100%;
-        width: 45%;
-        float: left;
-        display: flex;
-        // align-items: center;
-        // justify-content: center;
-        img {
-            height: 72px;
-            width: 72px;
-        }
-        .details {
-            margin: auto;
-            text-align: center;
-            .songName {
-                font-size: 18px;
-            }
-            .songSinger {
-                font-size: 10px;
-                color: $primary-color-2;
-            }
-        }
-    }
+    .song.cd {}
     .control {
         float: left;
         display: flex;
