hide search list

--- a/css/_inputs.scss
+++ b/css/_inputs.scss
@@ -83,7 +83,7 @@ input[type=range]:hover {
     position: absolute;
     list-style-type: none;
     width: 180px;
-    display: none;
+    // transform: translateX(0);
 }
 
 // #search:focus #searchList {
