--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,12 @@ body {
 }
 
 @media screen and (min-width: 391px) {
+  body {
+    width: 100vw;
+    height: 100vh;
+    background-image: linear-gradient(to bottom right, #4d50f7, #20ec2a);
+  }
+
   #playList {
     position: fixed;
     top: 50%;
